--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,11 @@
-
-
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+[env:esp32-2432S028Rv3]
+platform = espressif32@6.7.0
+board = esp32-2432S028Rv3
+board_build.sdkconfig = sdkconfig
 framework = arduino
 
 lib_deps = 
+	WiFi
 	bodmer/TFT_eSPI@^2.5.33
 	lvgl/lvgl@^8.3.11
     nitek/XPT2046_Bitbang_Slim@^2.0.0
@@ -15,6 +15,14 @@ lib_deps =
     SD
     SdFat
     JPEGDEC
+    NTPClient
+	PubSubClient
+	ArduinoJson
+	AWS_IoT
+	; arduino-aws-greengrass-iot
+	; stm32duino/STM32duino LwIP@^2.1.3
+
+lib_ignore=arduino-aws-greengrass-iot
 monitor_speed = 115200
 
 build_flags =
@@ -44,3 +52,5 @@ build_flags =
     -D LV_CONF_INCLUDE_SIMPLE
     -I include
     -I src
+    -DMBEDTLS_SSL_MAX_CONTENT_LEN=16384
+	-DPUBSUBCLIENT_MAX_PACKET_SIZE=16384
