Major update to UI and home screen functionality
Adds home screen with NTP sync and functionality
Updates button events to handle posting animations
Adds posting animations for health and button events
Refactors and enhances file structure

Relates to JIRA-123

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,11 +21,14 @@ lib_deps =
 	AWS_IoT
 	; arduino-aws-greengrass-iot
 	; stm32duino/STM32duino LwIP@^2.1.3
+	WiFiClientSecure
+	LittleFS
 
 lib_ignore=arduino-aws-greengrass-iot
 monitor_speed = 115200
 
 build_flags =
+    -std=gnu++17
 	-DUSER_SETUP_LOADED
 	-DUSE_HSPI_PORT
 	-DTFT_MISO=12
