--- a/platformio.ini
+++ b/platformio.ini
@@ -1,34 +1,39 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32-2432S028Rv3]
 platform = espressif32@6.7.0
 board = esp32-2432S028Rv3
 board_build.sdkconfig = sdkconfig
 framework = arduino
-
 lib_deps = 
 	WiFi
 	bodmer/TFT_eSPI@^2.5.33
-	lvgl/lvgl@^8.3.11
-    nitek/XPT2046_Bitbang_Slim@^2.0.0
-    Update
-    FS
+	nitek/XPT2046_Bitbang_Slim@^2.0.0
+	Update
+	FS
 	SPI
-    SD
-    SdFat
-    JPEGDEC
-    NTPClient
+	SD
+	SdFat
+	JPEGDEC
+	NTPClient
 	PubSubClient
 	ArduinoJson
 	AWS_IoT
-	; arduino-aws-greengrass-iot
-	; stm32duino/STM32duino LwIP@^2.1.3
 	WiFiClientSecure
 	LittleFS
-
-lib_ignore=arduino-aws-greengrass-iot
+	lvgl/lvgl@^8.4.0
+lib_ignore = arduino-aws-greengrass-iot
 monitor_speed = 115200
-
-build_flags =
-    -std=gnu++17
+build_flags = 
+	-std=gnu++17
 	-DUSER_SETUP_LOADED
 	-DUSE_HSPI_PORT
 	-DTFT_MISO=12
@@ -52,8 +57,8 @@ build_flags =
 	-DST7789_DRIVER
 	-DTFT_RGB_ORDER=TFT_BGR
 	-DTFT_INVERSION_OFF
-    -D LV_CONF_INCLUDE_SIMPLE
-    -I include
-    -I src
-    -DMBEDTLS_SSL_MAX_CONTENT_LEN=16384
+	-D LV_CONF_INCLUDE_SIMPLE
+	-I include
+	-I src
+	-DMBEDTLS_SSL_MAX_CONTENT_LEN=16384
 	-DPUBSUBCLIENT_MAX_PACKET_SIZE=16384
