fix: fixed core panic before WiFi Connection

--- a/include/secrets.h.template
+++ b/include/secrets.h.template
@@ -1,3 +1,10 @@
+/**
+ * @file secrets.h.template
+ * @brief Template for device secrets and credentials for cydOS.
+ *
+ * Copy and rename to secrets.h, then fill in your device-specific credentials.
+ */
+
 /*
   Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
   Permission is hereby granted, free of charge, to any person obtaining a copy of this
