Enhances build and WiFi diagnostics
Adds pre-build and post-upload filesystem actions. Updates WiFi
utils with connection diagnostics, mode, channel, and RSSI logging.

Relates to PROJ-123

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,3 +62,4 @@ build_flags =
 	-I src
 	-DMBEDTLS_SSL_MAX_CONTENT_LEN=16384
 	-DPUBSUBCLIENT_MAX_PACKET_SIZE=16384
+extra_scripts = pre:extra_script.py
